[package]
name = "git-gpt"
version = "0.2.0"
edition = "2021"
description="git gpt."
license="GPL-3.0-only"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }