[package]
name = "git-gpt"
version = "0.5.5"
edition = "2021"
description="Use GPT 3.5 API generate git commit log."
license="Apache-2.0"
repository="https://github.com/buhe/git-gpt"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }